# slot-imputation

./: .gitignore  pyproject.toml
docs/: slot-impute-plan.md
experiments/dff_variation/: config.yaml
experiments/m_variation/: config.yaml
notebooks/: dff_pipeline_kaggle.ipynb
scripts/: run_dff_pipeline.sh  run_pipeline.sh  train_anchors.sh  train_dff.sh
src/slot_impute/: data.py  extract.py  impute.py  impute_mlp.py  interferometry.py  model.py  report.py  train_transformer.py  transformer.py  validate.py  validate_mlp.py  variogram.py
