[project]
name = "slot-impute"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5",
    "numpy",
    "scipy",
    "pyyaml",
    "datasets>=2.14",
    "transformers>=4.36",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]